--- a/style.css
+++ b/style.css
@@ -4,18 +4,25 @@
     border: 0;
     height: auto;
     font-family: Arial, Helvetica, sans-serif;
+    box-sizing: border-box;
 }
 body{
     height: auto;
     display: flex;
+    width: 90%;
+    justify-content: flex-start;
 }
 .main{
     height: auto;
-    padding-left: 100px;
-    padding-right: 100px;
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-left: 150px;
 }
 .side-bar{
-    width: 100%;
+    width: 20%;
     height: auto;
     background-color: black;
 }
@@ -41,7 +48,6 @@ ol:hover{
 }
 .header img{
     height: 200px;
-    /* width: 300px; */
 }
 .des{
     display: flex;
@@ -68,18 +74,48 @@ ol:hover{
     max-width: 100px;
 }
 .items p {
-    overflow: hidden;
-    margin-left: 0;
+    margin-right: 20px;
 }
 .items div {
-    /* display : flex;
-    justify-content: space-around; */
-    display: inline-block;
+    display: flex;
+    justify-content: space-evenly;
+
 }
 .footer{
     height: 100px;
     display: flex;
+    width: 100%;
     align-items: center;
     border-top: 1px solid grey;
 
+}
+.url {
+    display: inline-block;
+    width: 100px; 
+    height: 100px; 
+    background-image: url("https://icons-for-free.com/iconfiles/png/512/global+globe+network+planet+web+world+icon-1320196166324319763.png");
+    background-size: auto 100%; 
+    background-repeat: no-repeat; 
+    float: left; 
+    margin-right: 10px; 
+  }
+.html{
+    display: inline-block;
+    width: 100px; 
+    height: 100px; 
+    background-image: url("https://www.w3.org/html/logo/downloads/HTML5_1Color_Black.png");
+    background-size: auto 100%; 
+    background-repeat: no-repeat; 
+    float: left; 
+    margin-right: 10px; 
+}
+.css{
+    display: inline-block;
+    width: 100px; 
+    height: 100px; 
+    background-image: url("https://upload.wikimedia.org/wikipedia/commons/d/d5/CSS3_logo_and_wordmark.svg");
+    background-size: auto 100%; 
+    background-repeat: no-repeat; 
+    float: left; 
+    margin-right: 10px; 
 }
